--- a/src/app/Icebreak/party.component.scss
+++ b/src/app/Icebreak/party.component.scss
@@ -26,3 +26,17 @@
 
   padding-bottom: 1vh;
 }
+
+h1 {
+  color: #3d405b;
+  font-size: 1.8rem;
+  font-weight: 600;
+  font-family: "Major Mono Display", monospace;
+}
+
+h2 {
+  color: #3d405b;
+  font-size: 1.5rem;
+  font-weight: 600;
+  font-family: "Major Mono Display", monospace;
+}
