--- a/src/app/Icebreak_Components_Card/icebreakinsideparty.component.scss
+++ b/src/app/Icebreak_Components_Card/icebreakinsideparty.component.scss
@@ -1,5 +1,7 @@
-.example-card {
+/* .example-card {
   max-width: 400px;
+  min-width: 400px;
+  height: auto;
 }
 
 .example-header-image {
@@ -20,3 +22,4 @@
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   }
 }
+ */
