card and button"

--- a/src/app/Icebreak/party.component.html
+++ b/src/app/Icebreak/party.component.html
@@ -18,16 +18,16 @@
 >
   <div class="row">
     <div
-      class="col-lg-8 col-md-12 col-sm-10 order-1 order-md-1 order-lg-1 bg-danger FullScreenright text-center justify-content-center"
+      class="col-lg-12 col-md-12 col-sm-10 order-1 order-md-1 order-lg-1 bg-danger FullScreenright text-center justify-content-center"
     >
       <h1 class="mb-5">Postez vos photos</h1>
-      <app-uploadmanager></app-uploadmanager>
+      <app-le-choix-des-buttons></app-le-choix-des-buttons>
       <app-icebreakinsideparty></app-icebreakinsideparty>
     </div>
-    <div
+    <!--    <div
       class="col-lg-4 col-md-12 col-sm-10 order-2 order-md-2 order-lg-2 FullScreenleft text-center justify-content-center"
     >
       <h2>Photos les mieux notés</h2>
-    </div>
+    </div> -->
   </div>
 </div>
