--- a/src/app/Icebreak/party.component.scss
+++ b/src/app/Icebreak/party.component.scss
@@ -6,7 +6,7 @@
   /* border-left: solid 1px white; */
   min-height: 100vh;
   padding-top: 8vh;
-  background-image: url("../../app/images/background.jpeg");
+  background-image: url("../../app/images/good.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
