--- a/src/app/Icebreak_Components_Button/uploadmanager.component.html
+++ b/src/app/Icebreak_Components_Button/uploadmanager.component.html
@@ -1,11 +1,11 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5 mb-5">
   <div class="row justify-content-around mt-5">
     <div class="col">
-      <button type="button" class="btn btn-primary">Challenge moi</button>
+      <app-modalchallenge></app-modalchallenge>
     </div>
     <div class="col"><h2>ou</h2></div>
     <div class="col">
-      <span class="btn btn-primary btn-file">
+      <span class="btn btn-primary btn-file" id="connexion">
         Envoyer une photo
         <input
           type="file"
@@ -19,4 +19,13 @@
       <app-uploadtask [file]="file"></app-uploadtask>
     </div>
   </div>
+</div> -->
+
+<span class="btn btn-primary btn-file" id="connexion">
+  Envoyer une photo
+  <input type="file" id="formFile" (change)="onDrop($event.target.files)" />
+</span>
+
+<div *ngFor="let file of files">
+  <app-uploadtask [file]="file"></app-uploadtask>
 </div>
