style des boutons

--- a/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.scss
+++ b/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.scss
@@ -23,9 +23,9 @@ h2 {
   font-weight: 600;
   font-family: "Major Mono Display", monospace;
 }
-
+/* 
 #connexion {
   background-color: #2f7f57;
   color: white;
   border: white;
-}
+} */
