--- a/src/app/Icebreak_Components_Button/uploadmanager.component.html
+++ b/src/app/Icebreak_Components_Button/uploadmanager.component.html
@@ -20,12 +20,15 @@
     </div>
   </div>
 </div> -->
+<div class="center">
+  <span id="hidden" class="btn button btn-file">
+    Envoyer une photo
+    <div class="button__horizontal"></div>
+    <div class="button__vertical"></div>
+    <input type="file" id="formFile" (change)="onDrop($event.target.files)" />
+  </span>
 
-<span class="btn btn-primary btn-file" id="connexion">
-  Envoyer une photo
-  <input type="file" id="formFile" (change)="onDrop($event.target.files)" />
-</span>
-
-<div *ngFor="let file of files">
-  <app-uploadtask [file]="file"></app-uploadtask>
+  <div *ngFor="let file of files">
+    <app-uploadtask [file]="file"></app-uploadtask>
+  </div>
 </div>
