--- a/src/app/Icebreak_Components_Button/uploadmanager.component.scss
+++ b/src/app/Icebreak_Components_Button/uploadmanager.component.scss
@@ -1,4 +1,4 @@
-.btn-file {
+/* .btn-file {
   position: relative;
   overflow: hidden;
 }
@@ -16,16 +16,16 @@
   cursor: inherit;
   display: block;
 }
-
-h2 {
+ */
+/* h2 {
   color: #3d405b;
   font-size: 1.5rem;
   font-weight: 600;
   font-family: "Major Mono Display", monospace;
-}
+} */
 
-#connexion {
+/* #connexion {
   background-color: #2f7f57;
   color: white;
   border: white;
-}
+} */
