--- a/src/app/Photomaton/pictures.component.scss
+++ b/src/app/Photomaton/pictures.component.scss
@@ -8,6 +8,6 @@
 }
 
 .FullScreen {
-  height: 100vh;
-  background-color: rgb(255, 51, 0);
+  max-height: 50vh;
+  background-color: rgb(0, 0, 0);
 }
