--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -85,10 +85,10 @@
 >
   Connectez vous !
 </button> -->
-<button
-  id="connexion"
-  class="btn btn-outline-primary mb-2 mr-2"
-  (click)="openWindowCustomClass(contenty)"
->
-  Connectez vous !
-</button>
+<div class="center">
+  <button class="btn button" (click)="openWindowCustomClass(contenty)">
+    Connectez vous !
+    <div class="button__horizontal"></div>
+    <div class="button__vertical"></div>
+  </button>
+</div>
