--- a/src/app/Icebreak/party.component.scss
+++ b/src/app/Icebreak/party.component.scss
@@ -17,12 +17,13 @@
   min-height: 100vh;
   padding-top: 8vh;
 
-  background: -webkit-linear-gradient(
-    -1deg,
-    rgb(239, 211, 190) 3%,
-    rgb(234, 182, 159) 97%
+  background: rgb(235, 189, 160);
+  background: linear-gradient(
+    0deg,
+    rgba(235, 189, 160, 1) 0%,
+    rgba(235, 189, 167, 1) 42%,
+    rgba(239, 209, 188, 1) 100%
   );
-  background: linear-gradient(-1deg, rgb(239, 211, 190), rgb(234, 182, 159));
 
   padding-bottom: 1vh;
 }
