--- a/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.html
+++ b/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.html
@@ -1,10 +1,12 @@
 <div class="container mt-5 mb-5">
   <div class="row justify-content-around mt-5">
-    <div class="col">
+    <div class="col-lg-4 col-md-12">
       <app-modalchallenge></app-modalchallenge>
     </div>
-    <div class="col"><h2>ou</h2></div>
-    <div class="col">
+    <div class="col-lg-4 col-md-12">
+      <h2>ou</h2>
+    </div>
+    <div class="col-lg-4 col-md-12">
       <app-uploadmanager></app-uploadmanager>
     </div>
   </div>
