--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -42,12 +42,13 @@
       </div>
       <div class="mt-5 col-12 order-sm-3">
         <h2 class="mb-5">Connectez vous</h2>
-        <p>
+
+        <p class="mt-5">
           Pour voir le contenu lié à votre invitation , nous vous invitons à
           vous connectez.
         </p>
         <p class="mb-5">pas de panique , tout y sera expliqué</p>
-        <app-modal-login></app-modal-login>
+        <app-modal-login class="mb-5"></app-modal-login>
       </div>
     </div>
     <div class="col-sm-4 order-sm-2 FullScreenleft"></div>
