--- a/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.scss
+++ b/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.scss
@@ -5,14 +5,14 @@
   font-family: "Major Mono Display", monospace;
 } */
 
-#loose {
+/* #loose {
   background-color: #e25729;
   color: white;
   border: white;
   font-family: "Major Mono Display", monospace;
-}
+} */
 
-.btn-file {
+/* .btn-file {
   position: relative;
   overflow: hidden;
 }
@@ -29,7 +29,7 @@
   outline: none;
   cursor: inherit;
   display: block;
-}
+} */
 
 .modal-title {
   font-family: "Major Mono Display", monospace;
