--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -9,6 +9,12 @@ h1 {
   font-weight: 600;
   font-family: "Major Mono Display", monospace;
 }
+
+p {
+  color: #3d405b;
+
+  font-family: "Major Mono Display", monospace;
+}
 h2 {
   color: #3d405b;
   font-weight: 600;
