--- a/src/app/modal-login/modal-login.component.scss
+++ b/src/app/modal-login/modal-login.component.scss
@@ -35,7 +35,7 @@
 
 @media (max-aspect-ratio: 18/9) and (min-width: 700px) {
   #body {
-    margin-top: 12vh;
+    margin-top: 17%;
     margin-left: 9vw;
     margin-right: 9vw;
   }
