--- a/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.html
+++ b/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.html
@@ -3,7 +3,7 @@
     <div class="col-lg-4 col-md-12">
       <app-modalchallenge></app-modalchallenge>
     </div>
-    <div class="col-lg-4 col-md-12">
+    <div class="col-lg-4 col-md-12 mt-3">
       <h2>ou</h2>
     </div>
     <div class="col-lg-4 col-md-12">
