--- a/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.scss
+++ b/src/app/Icebreak_Components_Button/le-choix-des-buttons/le-choix-des-buttons.component.scss
@@ -1,4 +1,4 @@
-.btn-file {
+/* .btn-file {
   position: relative;
   overflow: hidden;
 }
@@ -16,7 +16,7 @@
   cursor: inherit;
   display: block;
 }
-
+ */
 h2 {
   color: #3d405b;
   font-size: 1.5rem;
