--- a/src/app/Icebreak_Components_Card/icebreakinsideparty.component.html
+++ b/src/app/Icebreak_Components_Card/icebreakinsideparty.component.html
@@ -28,7 +28,7 @@
     </div>
   </div>
 </div> -->
-<div class="container-fluid mx-auto">
+<div class="container-fluid mx-auto mb-1">
   <owl-carousel-o [options]="customOptions" class="mt-5 ml-5">
     <ng-template
       class="mt-5 text-left ml-1"
