--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -64,12 +64,13 @@
             class="modal-footer text-center justify-content-around align-items-center pb-0"
           >
             <button
-              class="mt-3 mb-0"
+              class="button mt-3 mb-3"
               mat-raised-button
-              id="connexion"
               (click)="modal.close('close click')"
             >
               Connectez vous
+              <div class="button__horizontal"></div>
+              <div class="button__vertical"></div>
             </button>
           </div>
         </form>
@@ -87,7 +88,7 @@
 </button> -->
 <div class="center">
   <button class="btn button" (click)="openWindowCustomClass(contenty)">
-    Connectez vous !
+    C'est par ici !
     <div class="button__horizontal"></div>
     <div class="button__vertical"></div>
   </button>
