--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -47,11 +47,11 @@ p {
   /*   border-image: linear-gradient(to bottom, #f4f1de, #efd3be, #f4f1de) 0 1;  */
   border-image: linear-gradient(to bottom, #3d405b, #3d405b) 0 1;
   margin: 2%;
-  height: 40vh;
+  height: auto;
 }
 .rightposition {
   margin: 2%;
-  height: 40vh;
+  height: auto;
 
   place-items: center;
 
