--- a/src/app/modal-login/modal-login.component.scss
+++ b/src/app/modal-login/modal-login.component.scss
@@ -33,7 +33,7 @@
   background-color: #d9c9c9;
 }
 
-@media (max-aspect-ratio: 18/9) and (min-width: 700px) {
+@media (max-width: 2559px) {
   #body {
     margin-top: 17%;
     margin-left: 9vw;
@@ -41,9 +41,77 @@
   }
 }
 
-@media (max-aspect-ratio: 18/9) and (max-width: 700px) {
+@media (max-width: 2278px) and(min-width:1442px) {
   #body {
-    margin-top: 15vh;
+    padding-top: 8%;
+    margin-top: 13%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+
+@media (max-width: 1441px) and(min-width:1200px) {
+  #body {
+    padding-top: 10%;
+    margin-top: 13%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+
+@media (max-width: 1199px) and(min-width:833px) {
+  #body {
+    padding-top: 15%;
+    margin-top: 13%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+@media (max-width: 833px) and(min-width:822px) {
+  #body {
+    padding-top: 15%;
+    margin-top: 13%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+@media (max-width: 821px) and(min-width:768px) {
+  #body {
+    padding-top: 1%;
+    margin-top: 13%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+
+@media (min-width: 701px) {
+  #body {
+    margin-top: 17%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+
+@media (max-width: 821px) {
+  #body {
+    height: 100vh;
+    padding-top: 32%;
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
+}
+
+@media (max-width: 769px) {
+  #body {
+    margin-top: 1%;
+    margin-left: 9vw;
+    margin-right: 9vw;
+  }
+}
+
+@media (max-width: 700px) {
+  #body {
+    margin-top: 17%;
     margin-left: 9vw;
     margin-right: 9vw;
   }
@@ -51,7 +119,8 @@
 
 @media (max-width: 415px) {
   #body {
-    margin-top: 9 vh;
+    padding-top: 0px;
+    margin-top: 2 vh;
     margin-left: 5vw;
     margin-right: 5vw;
   }
@@ -64,20 +133,10 @@
     margin-right: 5vw;
   }
 }
-/* @media (max-width: 413px) and (min-width: 411px) {
-  .modal-body {
-    margin-top: 15 vh;
-    margin-left: 5vw;
-    margin-right: 5vw;
-  }
-}
 
-@media (max-width: 825px) and (min-width: 865px) {
-  .modal-body {
-    margin-top: 0 vh;
-    padding-bottom: 50vh;
+@media (max-width: 376px) {
+  #body {
     margin-left: 5vw;
     margin-right: 5vw;
   }
 }
- */
