--- a/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.html
+++ b/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.html
@@ -55,7 +55,7 @@
       id="loose"
       *ngIf="sendpicture"
       type="button"
-      class="btn buttonloose mt-4"
+      class="btn buttonloose"
       (click)="modal.close('Close click'); reset()"
     >
       J'y arrive pas !
