--- a/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.scss
+++ b/src/app/Icebreak_Components_Button/modalchallenge/modalchallenge.component.scss
@@ -63,4 +63,8 @@
   font-family: "Major Mono Display", monospace;
 }
 
-/*  */
+@media all and (max-width: 767px) {
+  #loose {
+    margin-top: 35px;
+  }
+}
