--- a/src/app/Icebreak_Components_Button/uploadmanager.component.html
+++ b/src/app/Icebreak_Components_Button/uploadmanager.component.html
@@ -21,7 +21,7 @@
   </div>
 </div> -->
 <div class="center">
-  <span class="btn button btn-file">
+  <span class="button btn-file">
     Envoyer une photo
     <div class="button__horizontal"></div>
     <div class="button__vertical"></div>
