--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -87,7 +87,7 @@
   Connectez vous !
 </button> -->
 <div class="center">
-  <button class="btn button" (click)="openWindowCustomClass(contenty)">
+  <button class="button" (click)="openWindowCustomClass(contenty)">
     C'est par ici !
     <div class="button__horizontal"></div>
     <div class="button__vertical"></div>
