--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,10 +1,10 @@
 <div id="center" class="form-card justify-content-center">
-  <form class="big" [formGroup]="signupForm" (ngSubmit)="signup(); logout()">
-    <button class="btn btn-primary btn-sm mb-5" routerLink="/home">
+  <form class="big" [formGroup]="signupForm" (ngSubmit)="signup()">
+    <!--  <button class="btn btn-primary btn-sm mb-5" routerLink="/home">
       <mat-icon>home</mat-icon>
       <p>Return Home</p>
-    </button>
-    <div class="row pb-3">
+    </button> -->
+    <div class="row pb-3 pt-5">
       <div class="col-sm-6 order-sm-1">
         <p>
           <mat-form-field appearance="outline" class="order-sm-1 order-md-1">
