--- a/src/app/Icebreak_Components_Card/icebreakinsideparty.component.scss
+++ b/src/app/Icebreak_Components_Card/icebreakinsideparty.component.scss
@@ -2,10 +2,19 @@
   height: 45vh;
   width: auto;
   object-fit: inherit;
+  position: relative;
+  z-index: -2;
 }
-
+.card {
+  background-color: rgba(0, 0, 255, 0);
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+    inset 0px 0px 35px rgba(0, 0, 0, 0.9); /* inset 0px 0px 10px rgba(0, 0, 0, 0.9),
+    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset; */
+  /*  rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px; */
+  /*   rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px; */
+}
 .card-body {
-  background-color: #f4f1de;
+  background-color: #f4f1def5;
 }
 .owl-prev {
   width: 15px;
@@ -15,9 +24,23 @@
   margin-left: -20px;
   display: block !important;
   border: 0px solid black;
-  background-color: blueviolet;
+  background-color: rgb(132, 0, 255);
 }
 
-.slide:hover {
+.card:hover {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.btns {
+  display: table;
+  margin: 30px auto;
+}
+.customNextBtn,
+.customPreviousBtn {
+  float: right;
+  background: #2d9070;
+  color: #fff;
+  padding: 10px;
+  margin-left: 5px;
+  cursor: pointer;
 }
