--- a/src/app/Photomaton/pictures.component.html
+++ b/src/app/Photomaton/pictures.component.html
@@ -1,5 +1,5 @@
-<div id="pictures" class="FullScreen">
-  <div id="toit" class="row justify-center justify-content-center">
+<div id="pictures">
+  <!-- <div id="toit" class="row justify-center justify-content-center">
     <div
       id="carouselExampleControls"
       class="carousel slide"
@@ -10,7 +10,7 @@
         <div class="carousel-item active">
           <img
             class="d-block w-100"
-            src="https://zupimages.net/up/22/05/j3x8.jpg"
+            src="https://zupimages.net/up/22/06/syzy.jpg"
             alt="First slide"
           />
         </div>
@@ -48,5 +48,44 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>
+  </div> -->
+  <mdb-carousel
+    id="size
+  "
+    class="carousel slide carousel-fade"
+    [animation]="'fade'"
+  >
+    <mdb-carousel-item>
+      <img
+        id="photoma"
+        class="w-100"
+        src="https://zupimages.net/up/22/06/syzy.jpg"
+        alt="First slide"
+      />
+    </mdb-carousel-item>
+    <mdb-carousel-item>
+      <img
+        id="photoma"
+        class="w-100"
+        src="https://zupimages.net/up/22/06/px2q.jpg"
+        alt="Second slide"
+      />
+    </mdb-carousel-item>
+    <mdb-carousel-item>
+      <img
+        id="photoma"
+        class="w-100 h-100"
+        src="https://zupimages.net/up/22/06/1q48.jpg"
+        alt="Third slide"
+      />
+    </mdb-carousel-item>
+    <mdb-carousel-item>
+      <img
+        id="photoma"
+        class="w-100"
+        src="https://zupimages.net/up/22/06/rb92.jpg"
+        alt="Third4 slide"
+      />
+    </mdb-carousel-item>
+  </mdb-carousel>
 </div>
