--- a/src/app/Photomaton/pictures.component.scss
+++ b/src/app/Photomaton/pictures.component.scss
@@ -3,11 +3,10 @@
   padding: 0;
 }
 
-#photo {
-  /*  padding-top: 8vh; */
+#pictures {
+  background-color: rgb(0, 0, 0);
 }
 
-.FullScreen {
-  max-height: 100vh;
-  background-color: rgb(0, 0, 0);
+#photoma {
+  height: 100vh;
 }
